[package]
name = "cfg-match"
version = "0.1.0"
authors = ["Liviu Dumea <dwmlyvyw@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/lyvyw/cfg-match"
description = """
A macro to ergonomically define an item depending on a large number of #[cfg]
parameters. Structured like a match chain, the first matching branch is the
item that gets emitted.
"""

